# VoiceAIAgent-final-clean

./: .env.sample  README.md  dashboard.html  pyproject.toml  requirements.txt  test_imports.py
dashboard/: .rooignore  README.md  dashboard.old.html  db.json  design.html  generate-rooignore.js  index.html  package-lock.json  package.json  register.html
dashboard/public/: dashboard.html
dashboard/src/: App.tsx  index.css
dashboard/src/auth/: AuthContext.tsx  AuthService.ts  Dashboard.tsx  InboundAgent.tsx  Login.tsx  ProtectedRoute.tsx  Register.tsx
dashboard/src/components/: Chat.tsx  Home.tsx
local_setup/: README.md  docker-compose.yml  inbound_server.py  ngrok-config.yml  quickstart_client.py  quickstart_server.py
local_setup/dockerfiles/: voiceaiagent-app.Dockerfile  voiceaiagent-inbound-server.Dockerfile  voiceaiagent-twilio-app.Dockerfile
local_setup/telephony_server/: requirements.txt  twilio_api_server.py
voiceaiagent/transcriber/: deepgram_transcriber.py
~/.docker/: config.json
