# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceaiagent"
version = "0.9.5"
readme = "README.md"
authors = [
    { name = "Prateek Sachan", email = "ps@prateeksachan.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pip-tools"]

[tool.setuptools]
package-dir = {"voiceaiagent" = "voiceaiagent"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.bumpver]
current_version = "0.9.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump voiceaiagent version {old_version} -> {new_version}"
tag_message = "voiceaiagent-{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"voiceaiagent/__init__.py" = [
    '^__version__ = "{version}"$',
]
